# pikelet

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  rustfmt.toml
archive/2018-10-26/: Cargo.toml
archive/2018-10-26/experiments/village/: Cargo.toml
archive/2018-10-26/experiments/village/src/: gen.rs  shader.rs  sky.rs  terrain.rs
archive/2018-10-26/experiments/village2/: Cargo.toml
archive/2018-10-26/lib/dggs/: Cargo.toml
archive/2018-10-26/lib/dggs/src/: lib.rs
archive/2018-10-26/lib/engine/src/: camera.rs  lib.rs
archive/2018-10-26/lib/geom/: Cargo.toml
archive/2018-10-26/lib/geom/src/: algorithms.rs
archive/2018-10-26/lib/geomath/: Cargo.toml
archive/2018-10-26/lib/geomath/src/: lib.rs
archive/2018-10-26/lib/job_queue/: Cargo.toml
archive/2018-10-26/resources/shaders/: flat_shaded.f.glsl
archive/2018-10-26/src/: camera.rs  lib.rs  main.rs
examples/: doc-comments.pi
experiments/geodesic/: Cargo.toml
experiments/geodesic/src/: color.rs  icosahedron.rs  main.rs  triangle_150.glslv  triangle_150.v.glsl
experiments/village/: Cargo.toml
experiments/village/src/: antenna.rs  axis_thingy.rs  camera.rs  forest.rs  gen.rs  house.rs  main.rs  math.rs  objects.rs  shader.rs  sky.rs  terrain.rs  world.rs
experiments/village2/src/: lib.rs  main.rs
geodesic/: Cargo.toml
geodesic/resources/shaders/: text.f.glsl  text.v.glsl
geodesic/src/: app.rs  camera.rs  color.rs  geom.rs  grid.rs  icosahedron.rs  index.rs  input.rs  job_queue.rs  macros.rs  main.rs  math.rs  polyhedra.rs  render.rs  resources.rs  text.rs  time.rs  triangle_150.f.glsl  triangle_150.v.glsl
geodesic/src/dggs/htm/: mod.rs
geodesic/src/geom/: algorithms.rs  half_edge.rs  mesh.rs  mod.rs  primitives.rs  star_field.rs
geodesic/src/shader/: flat.v.glsl  flat_shaded.f.glsl  shaded.f.glsl  shaded.v.glsl  solid_150.f.glsl  solid_150.v.glsl
geodesic/src/ui/: mod.rs  render.rs
imgui/: Cargo.toml
lib/dggs/: Cargo.toml
lib/dggs/src/htm/: cell.rs  mod.rs
lib/engine/: Cargo.toml
lib/engine/src/: camera.rs  input.rs  lib.rs  math.rs  times.rs  ui.rs
lib/engine/src/render/: command.rs  mod.rs  text.rs
lib/geom/: Cargo.toml
lib/geom/src/: algorithms.rs  lib.rs  mesh.rs  primitives.rs
lib/geomath/: Cargo.toml
lib/geomath/src/: lib.rs
lib/job_queue/: Cargo.toml
lib/job_queue/src/: lib.rs
pikelet-gui/: Cargo.toml
pikelet-gui/src/: data.rs  lib.rs
pikelet/src/: core.rs  surface.rs
pikelet/src/core/: semantics.rs  typing.rs
pikelet/src/core/projections/: pretty.rs  surface.rs
pikelet/src/surface/: grammar.lalrpop  lexer.rs
pikelet/src/surface/projections/: core.rs  pretty.rs
pikelet/tests/: examples.rs
resources/: display_config.ron  input.ron
resources/fonts/blogger/: README.md
resources/shaders/: text.f.glsl
src/: camera.rs  controls.rs  debug_controls.rs  dggs.rs  draw_origin_grid.rs  job.rs  lib.rs  main.rs  math.rs  render.rs  resources.rs  times.rs  ui.rs
src/assets/: Makefile
src/assets/conf/: materials.json  platform.json
src/assets/shaders/: default.frag.glsl  default.vert.glsl
src/dggs/htm/: mod.rs
src/game/: debug_controls.rs  job.rs  mod.rs
src/geom/: algorithms.rs  mesh.rs  mod.rs  primitives.rs  star_field.rs
src/pass/: mod.rs  sky.rs
src/render/: command.rs  mod.rs  text.rs
src/shaders/fragment/: sky.glsl
src/shaders/vertex/: sky.glsl
src/system/: mod.rs  rendering.rs
src/tools/: mod.rs
src/tools/component/: grid.rs  mod.rs
src/tools/pass/: grid.rs  mod.rs
src/voyager/: data.rs  main.rs  platform.rs  platform_glfw.rs  resources.rs
src/voyager/game/: mod.rs
src/voyager/graphics/: buffers.rs  materials.rs  mod.rs  shader_program.rs
src/voyager/platform/: glfw.rs  mod.rs
time/: Cargo.toml
time/src/: lib.rs
voyager/src/: main.rs  resources.rs
website/docs/pikelet/: roadmap.md
(+3 files in other folders)
