[package]
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>", "Chip Collier <photex@gmail.com>"]
name = "voyager"
version = "0.0.1"

[dependencies]
cgmath = "0.12"
clippy = { version = "0.0", optional = true }
find_folder = "0.3.0"
glium = "0.15"
imgui = { git = "https://github.com/Gekkio/imgui-rs.git", branch = "master" }
maplit = "0.1.3"
notify = "3.0"
num-traits = "0.1"
quick-error = "1.0.0"
rand = "^0.3.14"
rayon = "0.5"
rusttype = "0.2"
time = "0.1"
itertools = "0.5"
fnv = "1.0"

job_queue = { path = "lib/job_queue" }

[dev-dependencies]
expectest = "0.6.0"

[features]
default=[]
