[package]
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>", "Chip Collier <photex@gmail.com>"]
name = "engine"
version = "0.0.1"
publish = false

[dependencies]
cgmath = "0.14.0"
glium = "0.16.0"
imgui = "0.0.13"
imgui-glium-renderer = "0.0.13"
quick-error = "1.0.0"
rusttype = "0.2"
time = "0.1"

[dev-dependencies]
expectest = "0.7.0"
